<resources>
    <string name="app_name">Feedo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Bar -->
    <string name="home_BottomBar">Inicio</string>
    <string name="perfil_BottomBar">Perfil</string>
    <string name="agregar_receta">Agregar</string>

    <!-- Menu Pricipal -->
    <string name="Tittle">Feedo</string>
    <string name="hintBuscadorPrincipal">¿Qué se te antoja hoy?</string>
    <string name="textView_catalogo">Catálogos</string>

    <string name="textView_clasicosArgentino">Clásicos argentinos</string>
    <string name="textView_idealParaElMate">Ideal para el mate!</string>
    <string name="textView_modoSaludable">Modo saludable</string>
    <string name="textView_expres">Exprés</string>
    <string name="textView_modoAhorro">Modo ahorro</string>

    <string name="textView_DialogCatalogos">Catalogos</string>

    <!-- Buscador -->
    <string name="textView_Buscar">Buscar</string>
    <string name="tools_comida_buscada">Encontramos 23 resultados en relacion a tu busqueda</string>
    <string name="texteView_NoSeEncontro">No encontramos ninguna receta en relacion a lo que buscas...</string>


    <!-- Titulo de Catalogo menu principal-->
    <string name="Desayunos">Desayunos</string>
    <string name="Almuerzos">Almuerzos</string>
    <string name="Meriendas">Meriendas</string>
    <string name="Cena">Cena</string>
    <string name="Aperitivos">Aperitivos</string>
    <string name="Elaboradas">Elaboradas</string>
    <string name="Sencillas">Sencillas</string>
    <string name="Ensaladas">Ensaladas</string>
    <string name="Postres">Postres</string>
    <string name="Rapidas">Rapidas</string>
    <string name="diabeticos">Diabeticos</string>
    <string name="Sopas_y_guisos">Sopas y Guisos</string>
    <string name="Veganas">Veganas</string>
    <string name="Vegetarianas">Vegetarianas</string>


    <!-- Pantalla Catalogos -->
    <string name="catalogo_Destacados">Mas destacados!</string>
    <string name="tiempo_comida_destacada_catalogo">Tiempo</string>

    <!-- Pantalla perfil -->
    <string name="perfil_text_perfil">Perfil</string>
    <string name="perfil_biografia_more...">Mas...</string>
    <string name="perfil_default">usuario</string>
    <string name="perfil_biografia_more">Ver más</string>
    <string name="perfil_biografia_less">Ver menos</string>
    <!-- Pantalla de bienvenidos -->
    <string name="description_feedo">
        Con Feedo, cocinar es simple, divertido y sabdroso: aprendé nuevas recetas
        paso a paso y disfrutá de cada plato como nunca antes.
    </string>
    <string name="bottom_iniciar_sesion_welcome">Iniciar Sesión</string>

    <!-- Pantalla de Iniciar Sesión -->
    <string name="login_text_hola">Hola!</string>
    <string name="login_text_inicia_sesion">Inicia Sesión</string>
    <string name="login_text_email">Email</string>
    <string name="login_text_contraseña">Contraseña</string>
    <string name="login_se_olvido_contraseña">Se olvido la contraseña?</string>
    <string name="login_bottom_inicio_sesion">Iniciar Sesión</string>
    <string name="login_alternativos_auth">Alternativos</string>
    <string name="login_peticion_registrarse">No tienes una cuenta?</string>
    <string name="login_registrate">Registrate</string>
    <string name="login_hint_email">Ingresa un email</string>
    <string name="login_hint_contraseña">Ingresa una contraseña</string>


    <!-- Pantalla de registro de cuenta -->
    <string name="register_text_creaCuenta">Crea una cuenta!</string>
    <string name="register_text_usuario">Usuario</string>
    <string name="register_hint_usuario">Ingrese un nombre de usuario</string>
    <string name="register_text_email">Email</string>
    <string name="register_hint_email">Ingrese un email</string>
    <string name="register_text_contraseña">Contraseña</string>
    <string name="register_hint_contraseña">Ingrese una contraseña</string>
    <string name="register_text_confirmarContraseña">Confirmar la contraseña</string>
    <string name="register_hint_confirmarLacontraseña">Ingrese de nuevo la contraseña</string>
    <string name="register_bottom_registrarse">Registrarse</string>
    <string name="register_yaTengoCuenta">Ya tienes una cuenta?</string>
    <string name="register_iniciarSesion">Inicie Sesión</string>
    <string name="validacion_account">Te enviamos un correo de verificación. Valida tu cuenta para continuar.</string>
    <string name="textView_vista_alternativas">Alternativas</string>


    <!-- Pantalla de setting -->
    <string name="setting_ajustes">Ajustes</string>
    <string name="setting_modoOscuro">Modo oscuro</string>
    <string name="setting_sobreNostros">Sobre nosotros</string>
    <string name="setting_cerrarSesion">Cerrar Sesión</string>
    <string name="settig_modoOscuroDescription">Activa el modo oscuro para un cambio visual</string>

    <string name="sobre_nosotros">Feedo es una aplicación moóvil diseñada para hacer de la cocina una experiencia simple, práctica y accesible para todos. Ofrecemos un amplio recetario digital con preparaciones organizadas por categorías, ingredientes detallados y pasos claros para lograr resultados deliciosos.</string>

    <string name="sobre_nosotros2">Creemos en la colaboración: cada usuario puede compartir sus propias recetas y formar parte de una comunidad que inspira y motiva a cocinar.</string>
    <string name="seguinos_redes">Seguinos en: </string>
    <string name="instagramProyecto">proyecto.feedo</string>
    <string name="contactanos">Contactanos en:</string>
    <string name="correo_electronico">feedo5155@gmail.com</string>


    <!-- Pantalla de agregar receta -->
    <string name="textview_agregarAgregarReceta">Pon una foto de tu plato para que los demás lo vean</string>
    <string name="textview_tituloAgregarReceta">Agregar titulo: </string>
    <string name="textView_ingredientes">Ingredientes</string>
    <string name="hintDialog_addcomida">Añade el nombre de tu comida</string>
    <string name="botonDialog_add">Agregar</string>
    <string name="textView_addTime">Agregar\nTiempo</string>
    <string name="textView_addCantidadPasos">¿Cuantos\npasos?</string>
    <string name="textView_addIngrediente">Agregar ingrediente</string>
    <string name="textView_addPasos">Agregar instrucción</string>
    <string name="textView_addNombreIngrediente">Agregar nombre de ingrediente</string>
    <string name="textView_addImgIngrediente">Agregar foto del ingrediente</string>
    <string name="botonAddComida">¡Listo!</string>
    <string name="textViewDialog_addTime">Tiempo de preparación</string>
    <string name="textViewDialogStep_addPasos">Añade la cantidad de pasos</string>
    <string name="boton_dialogdeletestep">Borrar</string>
    <string name="boton_guardarcambios">Guardar</string>
    <string name="tv_descriptionAddTime">Agregar un numero y\nponer el tiempo abreviado\n(hs, min, seg).</string>
    <string name="tv_modificarInstruccion">Agregar o modificar instruccion</string>
    <string name="tv_descriptionAddCantidadSteps">Agregar solamente UN NUMERO que determina la cantidad de pasos.</string>
    <string name="textView_edit_foto_ingredientes">Modificar foto del ingrediente</string>
    <string name="textView_edit_nombre_ingredientes">Modificar nombre y cantidad del ingrediente</string>


</resources>