<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tvPronto"
    tools:context=".settingsFeedo.UI.feedoInformation.InformationOfTeamFragment">

    <ImageView
        android:id="@+id/fondoSobreNosotros"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_sobre_nosotros"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/fondoSobreNosotrosDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_sobrenosotros_dark"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="15sp"
        android:textColor="@color/text_de_items"
        android:fontFamily="@font/balo_thambi"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        android:text="@string/sobre_nosotros"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/text_de_items"
        android:fontFamily="@font/balo_thambi"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="22dp"
        android:text="@string/sobre_nosotros2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seguinos_redes"
        android:fontFamily="@font/balo_thambi"
        android:textColor="@color/text_de_items"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="85dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/img_instagram"
            android:layout_marginStart="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagramProyecto"
            android:textColor="@color/text_de_items"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/balo_thambi"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactanos"
        android:fontFamily="@font/balo_thambi"
        android:textColor="@color/text_de_items"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="175dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/img_gmail"
            android:layout_marginStart="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_electronico"
            android:textColor="@color/text_de_items"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:fontFamily="@font/balo_thambi"/>

    </LinearLayout>

</FrameLayout>