<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/parentDialogTime"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_de_items"
            android:text="@string/textViewDialog_addTime"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="30dp"/>

        <EditText
            android:id="@+id/etDialogAddTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_dialog_corner"
            android:layout_marginTop="15dp"
            android:textColor="@color/text_de_items"
            android:gravity="center_vertical"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_descriptionAddTime"
            android:textSize="15sp"
            android:textColor="@color/red"
            android:padding="15dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginHorizontal="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonDialogAddTime"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:fontFamily="@font/balo_thambi"
            android:text="@string/botonDialog_add"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:backgroundTint="@color/tittle_color"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/parentDialogPasos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_de_items"
            android:text="@string/textViewDialogStep_addPasos"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/etDialogAddCantidadPasos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_dialog_corner"
            android:layout_marginTop="15dp"
            android:textColor="@color/text_de_items"
            android:gravity="center_vertical"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_descriptionAddCantidadSteps"
            android:textSize="15sp"
            android:textColor="@color/red"
            android:padding="15dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginHorizontal="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botonDialogAddPasos"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:fontFamily="@font/balo_thambi"
            android:text="@string/botonDialog_add"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:backgroundTint="@color/tittle_color"
            app:cornerRadius="20dp"  />

    </LinearLayout>

</LinearLayout>